--- a/app/microservices/user/build.gradle
+++ b/app/microservices/user/build.gradle
@@ -31,8 +31,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation project(':common')
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+
+
