--- a/app/microservices/user/src/main/resources/application.properties
+++ b/app/microservices/user/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=User
+spring.datasource.url=jdbc:postgresql://localhost:5432/user_service_db
+spring.datasource.username=admin
+spring.datasource.password=master
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
