--- a/app/microservices/product/src/main/resources/application.properties
+++ b/app/microservices/product/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=Product
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/product_service_db
+spring.datasource.username=admin
+spring.datasource.password=master
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+server.port=8082
+
+
+
