Order service intergration and mock tests are done.

--- a/app/microservices/order/src/main/resources/application.properties
+++ b/app/microservices/order/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=orderEntity
+spring.application.name=order
 server.port=8083
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/order_service_db
