--- a/app/microservices/order/build.gradle
+++ b/app/microservices/order/build.gradle
@@ -16,7 +16,11 @@ java {
 repositories {
     mavenCentral()
 }
-
+/*dependencyManagement {
+    imports {
+        mavenBom "org.eclipse.jetty:jetty-bom:11.0.20" // Or compatible version
+    }
+}*/
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -27,6 +31,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    //testImplementation 'com.github.tomakehurst:wiremock:3.0.1'
+    testImplementation 'org.wiremock.integrations:wiremock-spring-boot:3.9.0'
 
 
 }
