--- a/app/microservices/user/src/main/resources/application.properties
+++ b/app/microservices/user/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=User
-spring.datasource.url=jdbc:postgresql://localhost:5432/user_service_db
-spring.datasource.username=admin
-spring.datasource.password=master
+
+# Database connection with fallback (default) values
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/user_service_db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:admin}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:master}
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
