--- a/app/microservices/order/src/main/resources/application.properties
+++ b/app/microservices/order/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 webclient.timeout=2000
 
 # External service URLs (User and Product services)
-user.service.url=http://localhost:8081
-product.service.url=http://localhost:8082
+user.service.base-url=${USER_SERVICE_BASE_URL:http://localhost:8081}
+product.service.base-url=${PRODUCT_SERVICE_BASE_URL:http://localhost:8082}
 
