--- a/app/.github/workflows/deploy.yml
+++ b/app/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to EC2
 
 on:
   push:
-    branches: [main]  # or 'master' or any branch you prefer
+    branches: [main]
 
 jobs:
   deploy:
