--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
-          cd /home/ubuntu/ecommerce/app
+          cd /home/ubuntu/ecommerce
           git pull origin main
           docker compose down
           docker compose up -d --build
