--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,5 @@ jobs:
         script: |
           cd /home/ubuntu/ecommerce
           git pull origin main
-          docker compose down
-          docker compose up -d --build
+          docker-compose down
+          docker-compose up -d --build
