--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,56 @@
-# It works, but not being used due to the EC2 resource limitation
+name: Test Docker Compose on GitHub Actions
 
+on:
+  push:
+    branches:
+      - ci/setup-cloud  # Branch name updated
+    # Only run the workflow if the commit message contains "deploying to cloud"
+    # This prevents unnecessary workflow runs
+    paths:
+      - 'app/docker-compose.yml'
 
-name: Deploy to EC2
-#
-#on:
-#  push:
-#    branches: [main]
-#
-#jobs:
-#  deploy:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#    - name: Connect to EC2 and deploy
-#      uses: appleboy/ssh-action@v1.0.3
-#      with:
-#        host: ${{ secrets.EC2_HOST }}
-#        username: ${{ secrets.EC2_USER }}
-#        key: ${{ secrets.EC2_SSH_KEY }}
-#        script: |
-#          cd /home/ubuntu/ecommerce/app
-#          git pull origin main
-#          docker-compose down
-#          docker-compose up -d --build
+  pull_request:
+    branches:
+      - ci/setup-cloud
+    paths:
+      - 'app/docker-compose.yml'
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'deploying to cloud')
+
+    steps:
+      # Step 1: Checkout the code
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      # Step 2: Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      # Step 3: Install Docker Compose
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
+      # Step 4: Build and start services with Docker Compose
+      - name: Build and start services
+        run: |
+          cd app  # Navigate to the folder containing docker-compose.yml
+          docker-compose -f docker-compose.yml up -d --build
+
+      # Step 5: Verify that the containers are running (optional, to check health)
+      - name: Check Docker containers
+        run: |
+          docker ps
+
+      # Step 6: (Optional) Run tests here to check that services are functioning
+      # Example: curl http://localhost:8081
+
+      # Step 7: Clean up by bringing down containers
+      - name: Docker Compose Down
+        run: |
+          cd app  # Navigate back to the app directory
+          docker-compose down
