--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,12 +2,30 @@ name: Test Docker Compose on GitHub Actions
 
 on:
   push:
-    branches: [ci/setup-cloud]  # Workflow runs on push to this branch
+    branches: [ci/setup-cloud]
+    # Only run the workflow if the commit message contains "deploy to cloud"
+  pull_request:
+    branches: [ci/setup-cloud]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'deploy to cloud')  # Only run if commit message contains "deploy to cloud"
+    env:
+      USER_DB: user_service_db
+      PRODUCT_DB: product_service_db
+      ORDER_DB: order_service_db
 
+      USER: postgres
+      PASSWORD: postgres
+
+      USER_DB_PORT: 5432
+      PRODUCT_DB_PORT: 5432
+      ORDER_DB_PORT: 5432
+
+      USER_DB_HOST: user-db
+      PRODUCT_DB_HOST: product-db
+      ORDER_DB_HOST: order-db
     steps:
       # Step 1: Checkout the code
       - name: Checkout repository
