--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,14 +3,14 @@ name: Test Docker Compose on GitHub Actions
 on:
   push:
     branches: [ci/setup-cloud]
-    # Only run the workflow if the commit message contains "deploy to cloud"
+    # Only run the workflow if the commit message contains "[deploy]"
   pull_request:
     branches: [ci/setup-cloud]
 
 jobs:
   test:
+    if: contains(github.event.head_commit.message, '[deploy]')  # Only run if commit message contains "[deploy]"
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'deploy to cloud')  # Only run if commit message contains "deploy to cloud"
     env:
       USER_DB: user_service_db
       PRODUCT_DB: product_service_db
