--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -10,9 +10,8 @@ on:
 
 jobs:
   build-and-deploy:
+    if: contains(github.event.head_commit.message, 'deploy_user_service')
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, '[deploy_user_service]')
-
     env:
       USER_DB: user_service_db
       PRODUCT_DB: product_service_db
