--- a/app/microservices/user/build.gradle
+++ b/app/microservices/user/build.gradle
@@ -33,8 +33,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	runtimeOnly 'org.postgresql:postgresql'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'com.google.cloud.sql:com.google.cloud.sql:1.14.0'
-
+	implementation 'com.google.cloud.sql:postgres-socket-factory:1.25.0'
 	//implementation project(':common')
 }
 
