Workflow updated 2.2.7 - ArtifacrRegistry, deploy user service

--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -29,7 +29,7 @@ jobs:
       ORDER_DB_HOST: order-db
 
       REGION: europe-west3
-      REPOSITORY: microservice_repo
+      REPOSITORY: microservice-repo
       IMAGE_NAME: user-service
 
     steps:
