--- a/app/microservices/user/src/main/resources/application.properties
+++ b/app/microservices/user/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 spring.application.name=User
 
 # Database connection with fallback (default) values
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/user_service_db}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:admin}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:master}
+#spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/user_service_db}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME:admin}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:master}
+#
+#
+#
+#server.port=8081
+#
+#
 
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-server.port=8081
 spring.datasource.driver-class-name=org.postgresql.Driver
+
