--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -63,6 +63,9 @@ services:
             SPRING_DATASOURCE_PASSWORD: ${PASSWORD}
             USER_DB_HOST: ${USER_DB_HOST}
             USER_DB_PORT: ${USER_DB_PORT}
+            SPRING_PROFILES_ACTIVE: docker
+            PRODUCT_SERVICE_URL: http://product-service:8082
+            ORDER_SERVICE_URL: http://order-service:8083
         ports:
             - "8081:8081"
 
@@ -79,6 +82,9 @@ services:
             SPRING_DATASOURCE_PASSWORD: ${PASSWORD}
             PRODUCT_DB_HOST: ${PRODUCT_DB_HOST}
             PRODUCT_DB_PORT: ${PRODUCT_DB_PORT}
+            SPRING_PROFILES_ACTIVE: docker
+            USER_SERVICE_URL: http://user-service:8081
+            ORDER_SERVICE_URL: http://order-service:8083            
         ports:
             - "8082:8082"
 
@@ -95,7 +101,8 @@ services:
             SPRING_DATASOURCE_PASSWORD: ${PASSWORD}
             ORDER_DB_HOST: ${ORDER_DB_HOST}
             ORDER_DB_PORT: ${ORDER_DB_PORT}
-            USER_SERVICE_BASE_URL: http://user-service:8081
-            PRODUCT_SERVICE_BASE_URL: http://product-service:8082
+            SPRING_PROFILES_ACTIVE: docker
+            USER_SERVICE_URL: http://user-service:8081
+            PRODUCT_SERVICE_URL: http://product-service:8082
         ports:
             - "8083:8083"
