--- a/app/microservices/user/src/main/resources/application-cloud.properties
+++ b/app/microservices/user/src/main/resources/application-cloud.properties
@@ -1,4 +1,5 @@
 spring.application.name=User
+server.port=8080
 
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
