Workflow updated 2.3.3, deploy user service

--- a/app/microservices/user/src/main/resources/application-cloud.properties
+++ b/app/microservices/user/src/main/resources/application-cloud.properties
@@ -7,3 +7,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 product.service.url=${PRODUCT_SERVICE_URL:https://product-service-xyz.a.run.app}
 order.service.url=${ORDER_SERVICE_URL:https://order-service-xyz.a.run.app}
+
+# Let Spring retry on startup and wait for the db
+spring.sql.init.mode=never
+spring.datasource.hikari.initialization-fail-timeout=-1
