--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -49,12 +49,12 @@ jobs:
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
-#      - name: Build & Push Docker image
-#        run: |
-#          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
-#          cd app
-#          docker build -t "$IMAGE_URI" ./microservices/user
-#          docker push "$IMAGE_URI"
+      - name: Build & Push Docker image
+        run: |
+          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
+          cd app
+          docker build -t "$IMAGE_URI" ./microservices/user
+          docker push "$IMAGE_URI"
 
       - name: Deploy to Cloud Run
         run: |
