--- a/app/microservices/user/src/main/resources/application-docker.properties
+++ b/app/microservices/user/src/main/resources/application-docker.properties
@@ -7,3 +7,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 product.service.url=${PRODUCT_SERVICE_URL:http://localhost:8082}
 order.service.url=${ORDER_SERVICE_URL:http://localhost:8083}
+
+# Let Spring retry on startup and wait for the db
+spring.sql.init.mode=never
+spring.datasource.hikari.initialization-fail-timeout=-1
