--- a/app/microservices/product/src/main/resources/application-docker.properties
+++ b/app/microservices/product/src/main/resources/application-docker.properties
@@ -1,11 +1,11 @@
-spring.application.name=User
-server.port=8081
+spring.application.name=Product
+server.port=8082
 
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-product.service.url=${PRODUCT_SERVICE_URL:http://localhost:8082}
+user.service.url=${USER_SERVICE_URL:http://localhost:8081}
 order.service.url=${ORDER_SERVICE_URL:http://localhost:8083}
 
 # Let Spring retry on startup and wait for the db
