--- a/app/microservices/order/src/main/resources/application-docker.properties
+++ b/app/microservices/order/src/main/resources/application-docker.properties
@@ -1,12 +1,12 @@
-spring.application.name=User
-server.port=8081
+spring.application.name=order
+server.port=8083
 
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
+user.service.url=${USER_SERVICE_URL:http://localhost:8081}
 product.service.url=${PRODUCT_SERVICE_URL:http://localhost:8082}
-order.service.url=${ORDER_SERVICE_URL:http://localhost:8083}
 
 # Let Spring retry on startup and wait for the db
 #spring.sql.init.mode=never
