--- a/app/microservices/order/src/main/resources/application.properties
+++ b/app/microservices/order/src/main/resources/application.properties
@@ -1,20 +1,10 @@
 spring.application.name=order
-server.port=8083
-
-# Database connection with fallback (default) values
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/order_service_db}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:admin}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:master}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Timeout for web client
 webclient.timeout=2000
-
-# External service URLs (User and Product services)
-user.service.base-url=${USER_SERVICE_BASE_URL:http://localhost:8081}
-product.service.base-url=${PRODUCT_SERVICE_BASE_URL:http://localhost:8082}
 
