--- a/app/microservices/product/src/main/resources/application.properties
+++ b/app/microservices/product/src/main/resources/application.properties
@@ -1,15 +1,10 @@
 spring.application.name=Product
 
-# Database connection with fallback (default) values
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/product_service_db}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:admin}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:master}
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-server.port=8082
 
 
 
