Workflow updated 2.3.4, deploy user service

--- a/.github/workflows/deploy-order-service.yml
+++ b/.github/workflows/deploy-order-service.yml
@@ -49,4 +49,4 @@ jobs:
             --platform=managed \
             --region=${{ env.REGION }} \
             --allow-unauthenticated \
-            --set-env-vars="SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/order_service_db?cloudSqlInstance=${{ secrets.GCP_SQL_CONNECTION_NAME }}&socketFactory=com.google.cloud.sql.postgres.SocketFactory,SPRING_DATASOURCE_USERNAME=postgres,SPRING_DATASOURCE_PASSWORD=postgres,USER_SERVICE_URL=https://user-service-716746262210.europe-west3.run.app,PRODUCT_SERVICE_URL=5432"
+            --set-env-vars="SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/order_service_db?cloudSqlInstance=${{ secrets.GCP_SQL_CONNECTION_NAME }}&socketFactory=com.google.cloud.sql.postgres.SocketFactory,SPRING_DATASOURCE_USERNAME=postgres,SPRING_DATASOURCE_PASSWORD=postgres,USER_SERVICE_URL=https://user-service-716746262210.europe-west3.run.app,PRODUCT_SERVICE_URL=https://product-service-716746262210.europe-west3.run.app"
