--- a/app/microservices/user/src/main/resources/application-cloud.properties
+++ b/app/microservices/user/src/main/resources/application-cloud.properties
@@ -5,9 +5,9 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-product.service.url=${PRODUCT_SERVICE_URL:https://product-service-xyz.a.run.app}
-order.service.url=${ORDER_SERVICE_URL:https://order-service-xyz.a.run.app}
+product.service.url=${PRODUCT_SERVICE_URL:https://product-service-716746262210.europe-west3.run.app}
+order.service.url=${ORDER_SERVICE_URL:https://order-service-716746262210.europe-west3.run.app}
 
 # Let Spring retry on startup and wait for the db
-spring.sql.init.mode=never
+#spring.sql.init.mode=never
 spring.datasource.hikari.initialization-fail-timeout=-1
