--- a/app/microservices/product/build.gradle
+++ b/app/microservices/product/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'com.google.cloud.sql:postgres-socket-factory:1.25.0'
+
 	//implementation project(':common')
 
 }
