--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -13,55 +13,79 @@ jobs:
     if: contains(github.event.head_commit.message, 'deploy user service')
     runs-on: ubuntu-latest
     env:
-      USER_DB: user_service_db
-      PRODUCT_DB: product_service_db
-      ORDER_DB: order_service_db
-
-      USER: postgres
-      PASSWORD: postgres
-
-      USER_DB_PORT: 5432
-      PRODUCT_DB_PORT: 5432
-      ORDER_DB_PORT: 5432
-
-      USER_DB_HOST: user-db
-      PRODUCT_DB_HOST: product-db
-      ORDER_DB_HOST: order-db
-
       REGION: europe-west3
       REPOSITORY: microservice-repo
       IMAGE_NAME: user-service
 
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: user_service_db
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Cache Gradle
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Run tests
+        env:
+          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/user_service_db
+          SPRING_DATASOURCE_USERNAME: postgres
+          SPRING_DATASOURCE_PASSWORD: postgres
+        run: |
+          cd microservices/user
+          ./gradlew test
 
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS_JSON }}
 
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+#      - name: Set up Cloud SDK
+#        uses: google-github-actions/setup-gcloud@v2
+#        with:
+#          project_id: ${{ secrets.GCP_PROJECT_ID }}
+#
+#      - name: Configure Docker for Artifact Registry
+#        run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
-      - name: Configure Docker for Artifact Registry
-        run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+#      - name: Build & Push Docker image
+#        run: |
+#          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
+#          cd app
+#          docker build -t "$IMAGE_URI" ./microservices/user
+#          docker push "$IMAGE_URI"
 
-      - name: Build & Push Docker image
-        run: |
-          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
-          cd app
-          docker build -t "$IMAGE_URI" ./microservices/user
-          docker push "$IMAGE_URI"
-
-      - name: Deploy to Cloud Run
-        run: |
-          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
-          gcloud run deploy ${{ env.IMAGE_NAME }} \
-            --image="$IMAGE_URI" \
-            --platform=managed \
-            --region=${{ env.REGION }} \
-            --allow-unauthenticated \
-            --set-env-vars="SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/user_service_db?cloudSqlInstance=${{ secrets.GCP_SQL_CONNECTION_NAME }}&socketFactory=com.google.cloud.sql.postgres.SocketFactory,SPRING_DATASOURCE_USERNAME=postgres,SPRING_DATASOURCE_PASSWORD=postgres,PRODUCT_SERVICE_URL=https://product-service-716746262210.europe-west3.run.app,ORDER_SERVICE_URL=https://order-service-716746262210.europe-west3.run.app"
+#      - name: Deploy to Cloud Run
+#        run: |
+#          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
+#          gcloud run deploy ${{ env.IMAGE_NAME }} \
+#            --image="$IMAGE_URI" \
+#            --platform=managed \
+#            --region=${{ env.REGION }} \
+#            --allow-unauthenticated \
+#            --set-env-vars="SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/user_service_db?cloudSqlInstance=${{ secrets.GCP_SQL_CONNECTION_NAME }}&socketFactory=com.google.cloud.sql.postgres.SocketFactory,SPRING_DATASOURCE_USERNAME=postgres,SPRING_DATASOURCE_PASSWORD=postgres,PRODUCT_SERVICE_URL=https://product-service-716746262210.europe-west3.run.app,ORDER_SERVICE_URL=https://order-service-716746262210.europe-west3.run.app"
