Workflow update 2.3.6, Adding tests to workflow, deploy user service

--- a/.github/workflows/deploy-user-service.yml
+++ b/.github/workflows/deploy-user-service.yml
@@ -57,7 +57,7 @@ jobs:
           SPRING_DATASOURCE_USERNAME: postgres
           SPRING_DATASOURCE_PASSWORD: postgres
         run: |
-          cd microservices/user
+          cd app/microservices/user
           ./gradlew test
 
       - name: Authenticate to Google Cloud
