Adding tests to workflow 1.0.4, deploy user service

--- a/app/microservices/user/build.gradle
+++ b/app/microservices/user/build.gradle
@@ -42,4 +42,10 @@ tasks.named('test') {
 }
 
 
+test {
+	testLogging {
+		// show standard out and err for all tests
+		showStandardStreams = true
+	}
+}
 
